{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player Ground",
            "id": "0909479f-0bb6-4ad0-8076-e6d0799e2b17",
            "actions": [
                {
                    "name": "Left/Right",
                    "type": "Value",
                    "id": "8972e8e9-fdb0-4286-b795-20e3b6d3d7a8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump/Dash",
                    "type": "Button",
                    "id": "bbca1f8e-24bc-4b16-aa61-ef8c01f4619e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "1ded8abb-81f3-4db3-a13b-642cc4cfc49c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left/Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "14a70c10-607c-46f8-b60e-f2b2f5c44431",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a9f8b41a-2f83-40f0-8548-ac53514828f3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Left/Right",
                    "id": "4ef3c3ce-ca66-41a3-a172-611801010a98",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left/Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d8dcb813-1a44-4c51-bad7-034305154818",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4cff1790-9604-4110-99d3-a6819788d6ea",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4ee9fb4d-31a7-4522-8708-609597a29e5e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump/Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae2f32a9-5fac-40e1-a76b-d7da7e346127",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump/Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}